--- a/Assignment 6/gRPC/build.gradle
+++ b/Assignment 6/gRPC/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-  id 'java'
-  id "com.google.protobuf" version "0.8.18" apply true
+    id 'java'
+    id "com.google.protobuf" version "0.8.18" apply true
 
 }
 
@@ -8,15 +8,12 @@ description = "Protocol Buffers Socket Example"
 
 repositories {
     mavenCentral()
+    flatDir {
+        dirs 'lib'
+    }
 }
 
-repositories {
-   flatDir {
-       dirs 'lib'
-   }
-}
-
-// json and protobuf dependencies 
+// json and protobuf dependencies
 dependencies {
     implementation("io.grpc:grpc-stub:1.40.1")
     implementation (name:'Registry', ext:'jar')
@@ -33,151 +30,151 @@ protobuf {
         artifact = 'com.google.protobuf:protoc:3.21.1'
     }
     plugins {
-      grpc {
-        artifact = 'io.grpc:protoc-gen-grpc-java:1.49.1'
-      }
+        grpc {
+            artifact = 'io.grpc:protoc-gen-grpc-java:1.49.1'
+        }
     }
     generateProtoTasks {
-      all()*.plugins {
-        grpc {}
-      }
+        all()*.plugins {
+            grpc {}
+        }
     }
 }
 
 sourceSets {
     main {
         java {
-            srcDirs 'build/generated/source/proto/main/grpc'
             srcDirs 'build/generated/source/proto/main/java'
+            srcDirs 'src/main/java'
         }
     }
 }
- // host and port of registration node
- def registryHost = "localhost" // for reaching the classes registry node use "ser321test.duckdns.org"
- def protobufPort = 9000 // port where the protobuf registry runs on -- for reaching the classes registry node use 8080
- def jsonPort = 9001 // port where the json registry runs on
- def grpcPort = 9002 // port where the json registry runs on
+// host and port of registration node
+def registryHost = "localhost" // for reaching the classes registry node use "ser321test.duckdns.org"
+def protobufPort = 9000 // port where the protobuf registry runs on -- for reaching the classes registry node use 8080
+def jsonPort = 9001 // port where the json registry runs on
+def grpcPort = 9002 // port where the json registry runs on
 
- // port and host of a service node
- def servicePort = 8000; // port for the service node
- def serviceHost = 'localhost'; // host for the service node
- def nodeName = "test" // Name of node to be registered
+// port and host of a service node
+def servicePort = 8000; // port for the service node
+def serviceHost = 'localhost'; // host for the service node
+def nodeName = "test" // Name of node to be registered
 
- // for json and protobuf: port where service can be found (getService method)
- def discoveryPort = 10000 // port where the node runs a registry thread for the registry to call getSerices
+// for json and protobuf: port where service can be found (getService method)
+def discoveryPort = 10000 // port where the node runs a registry thread for the registry to call getSerices
 
- // Method to Echo in client
- def message = "Hello you" // for the echo service in the node
+// Method to Echo in client
+def message = "Hello you" // for the echo service in the node
 
- def regOn = false
+def regOn = false;
 
 // task reading in the arguments if any given, if not the default from above will be used
 task arguments {
     if (project.hasProperty("nodeName")) {
-      nodeName = project.getProperty("nodeName")
+        nodeName = project.getProperty("nodeName")
     }
     if (project.hasProperty("jsonPort")) {
-      jsonPort = project.getProperty("jsonPort")
+        jsonPort = project.getProperty("jsonPort")
     }
     if (project.hasProperty("registryHost")) {
-      registryHost = project.getProperty("registryHost")
+        registryHost = project.getProperty("registryHost")
     }
     if (project.hasProperty("grpcPort")) {
-      grpcPort = project.getProperty("grpcPort")
+        grpcPort = project.getProperty("grpcPort")
     }
     if (project.hasProperty("protobufPort")) {
-      protobufPort = project.getProperty("protobufPort")
+        protobufPort = project.getProperty("protobufPort")
     }
     if (project.hasProperty("servicePort")) {
-      servicePort = project.getProperty("servicePort")
+        servicePort = project.getProperty("servicePort")
     }
     if (project.hasProperty("discoveryPort")) {
-      discoveryPort = project.getProperty("discoveryPort")
+        discoveryPort = project.getProperty("discoveryPort")
     }
     if (project.hasProperty("message")) {
-      messase = project.getProperty("message")
+        messase = project.getProperty("message")
     }
     if (project.hasProperty("serviceHost")) {
-      serviceHost = project.getProperty("serviceHost")
+        serviceHost = project.getProperty("serviceHost")
     }
     if (project.hasProperty("regOn")) {
-      regOn = project.getProperty("regOn")
+        regOn = project.getProperty("regOn")
     }
 }
 
 // Task that runs the registry server
 task runRegistryServer(type: JavaExec) {
-group "registry"
-  classpath = sourceSets.main.runtimeClasspath
-  description = "Run Server"
-  main = 'registry.Server'
-  // default args
-  args protobufPort
-  args jsonPort
-  args grpcPort
+    group "registry"
+    classpath = sourceSets.main.runtimeClasspath
+    description = "Run Server"
+    main = 'registry.Server'
+    // default args
+    args protobufPort
+    args jsonPort
+    args grpcPort
 }
 
 // runs a test that creates some services that can be discovered
 task runDiscovery(type: JavaExec) {
-	group "registry"
-  classpath = sourceSets.main.runtimeClasspath
-  description = "Run ProtoBuf Discovery"
-  main = 'test.DiscoveryServers'
+    group "registry"
+    classpath = sourceSets.main.runtimeClasspath
+    description = "Run ProtoBuf Discovery"
+    main = 'test.DiscoveryServers'
 }
 
 // registers the json services created with runDiscovery
 task testJsonRegistration(type: JavaExec) {
-	group "registry"
-  classpath = sourceSets.main.runtimeClasspath
-  description = "Run JSON Discovery"
-  main = 'test.TestJson'
+    group "registry"
+    classpath = sourceSets.main.runtimeClasspath
+    description = "Run JSON Discovery"
+    main = 'test.TestJson'
 }
 
 // registers the protobuf services created with runDiscovery
 task testProtobufRegistration(type: JavaExec) {
-	group "registry"
-  classpath = sourceSets.main.runtimeClasspath
-  description = "Run Protobuf Discovery"
-  main = 'test.TestProtobuf'
+    group "registry"
+    classpath = sourceSets.main.runtimeClasspath
+    description = "Run Protobuf Discovery"
+    main = 'test.TestProtobuf'
 }
 
 // ####### Client Server example with grpc
 
 // runs a client which will run some commands on a node and also on the registration node
 task runClient(type: JavaExec) {
-  dependsOn arguments
-  classpath = sourceSets.main.runtimeClasspath
-  description = "Run Client"
-  main = 'example.grpcclient.EchoClient'
-  standardInput = System.in
-  // default args
-  args serviceHost 
-  args servicePort
-  args registryHost
-  args grpcPort
-  args message 
-  args regOn
+    dependsOn arguments
+    classpath = sourceSets.main.runtimeClasspath
+    description = "Run Client"
+    main = 'example.grpcclient.EchoClient'
+    standardInput = System.in
+    // default args
+    args serviceHost
+    args servicePort
+    args registryHost
+    args grpcPort
+    args message
+    args regOn
 }
 
 // runs a service node which already has the echo and joke service included
 task runNode(type: JavaExec) {
-  dependsOn arguments
-  classpath = sourceSets.main.runtimeClasspath
-  description = "Run Server"
-  main = 'example.grpcclient.Node'
-  // default args
-  args registryHost
-  args grpcPort
-  args serviceHost
-  args servicePort
-  args nodeName
-  args regOn
+    dependsOn arguments
+    classpath = sourceSets.main.runtimeClasspath
+    description = "Run Server"
+    main = 'example.grpcclient.Node'
+    // default args
+    args registryHost
+    args grpcPort
+    args serviceHost
+    args servicePort
+    args nodeName
+    args regOn
 }
 
 
 // How I ran it:
 // ser321test.duckdns.org is my IP on the first AWS instance
-// on AWS instance: 
+// on AWS instance:
 
 // gradle runRegistryServer -PgrpcPort=8080
 
